# study_noise

./: LICENSE  README.md  pyproject.toml
doc/: 01_noise.md
learning/: randomwalk.py  whitenoise.py
